--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".activities.MainActivity">
 
     <TextView
         android:id="@+id/textView"
@@ -19,14 +19,16 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="164dp"
-        android:layout_height="129dp"
+        android:layout_width="300dp"
+        android:layout_height="130dp"
         android:layout_marginTop="500dp"
-        android:text="Button"
+        android:backgroundTint="@color/spotify_green"
+        android:onClick="loginApi"
+        android:text="Log In"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:onClick="loginApi" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
