fixed authentication problem with refresh_token

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
         android:layout_marginTop="500dp"
         android:backgroundTint="@color/spotify_green"
         android:onClick="loginApi"
-        android:text="Log In"
+        android:text="@string/log_in"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
