--- a/app/src/main/res/layout/trackview_item.xml
+++ b/app/src/main/res/layout/trackview_item.xml
@@ -5,8 +5,12 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
+        android:id="@+id/track"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/artist"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/holo_orange_light" />
+        android:textSize="11sp" />
 </LinearLayout>
