--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="spotify_green">#1D8954</color>
+    <color name="spotify_black">#191414</color>
+    <color name="spotify_white">#FFFFFF</color>
 </resources>
